// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Raw /> renders correctly 1`] = `
<div
  class="content mobile"
/>
`;

exports[`<Raw /> renders correctly 2`] = `
<div
  class="content"
/>
`;

exports[`<Raw /> renders correctly 3`] = `
<div
  class="content mobile"
>
  <div>
    foo
  </div>
</div>
`;

exports[`<Raw /> renders correctly 4`] = `
<div
  class="content"
>
  <div>
    bar
  </div>
</div>
`;
